<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Android Base Project Codecomputerlove</string>
  <string name="url">http://www.codecomputerlove.com/</string>

  <string name="activity_title_user_list">Users List</string>
  <string name="activity_title_user_details">User Details</string>

  <string name="btn_text_load_data">Load Sample Data</string>
  <string name="btn_text_retry">Retry</string>

  <string name="view_text_email">Email:</string>
  <string name="view_text_followers">Followers:</string>
  <string name="view_text_description">Description:</string>

  <string name="string_content_description">Non accessible view</string>

  //Exception messages
  <string name="exception_message_generic">There was an application error</string>
  <string name="exception_message_no_connection">There is no internet connection</string>
  <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
</resources>
