<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.fernandocejas.android10.sample.presentation.view.component.AutoLoadImageView
      android:id="@+id/iv_cover"
      android:layout_width="match_parent"
      android:layout_height="@dimen/iv_cover_height"
      android:background="@android:color/darker_gray"
      />

  <TextView
      android:id="@+id/tv_fullname"
      style="@style/AppTheme.TextViewHeader"
      />

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        style="@style/AppTheme.TextViewTitle"
        android:text="@string/view_text_email"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        style="@style/AppTheme.TextViewTitle"
        android:text="@string/view_text_followers"
        />
    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        style="@style/AppTheme.TextViewTitle"
        android:text="@string/view_text_description"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </LinearLayout>

</LinearLayout>